Bug 107116 - FILEOPEN: RTF: Missing upper and lower borders around text
Summary: FILEOPEN: RTF: Missing upper and lower borders around text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2017-04-12 11:55 UTC by Xisco Faulí
Modified: 2017-08-30 19:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-04-12 11:55:19 UTC
This is a follow-up bug of bug 105729
Steps to reproduce:
1. Open attachment 131355 [details] from bug 105729

Expected behaviour: There should be an upper and lower borders around the text

Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: 7635e0c1c7f821a1081f8e3868f641ae74a172d6
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-04-12 11:56:28 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 07:49:43 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 10:56:29 (GMT)
commit a9e029ace41562e28e9242d63230ad1ca275f5d3 (patch)
tree 605fee980e467c8a5896bdf5053fd7422865091a
parent c9c5c94771f22919ec82351b3b9b3096af96a508 (diff)
tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup
See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the details on style override in RTF.

Here the problem was that we added an unneeded "reset to 0" property, the
opposite situation that commit 657c6cc3acec0528209a8584b838cd6de581c437
(tdf#104228 RTF import: fix override of style left/right para margin,
2016-12-13) was fixing (there a "reset to 0" was missing).

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-04-19 07:55:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9f0d8d02885eca619552b19eab30c1eade9e7ef

tdf#107116 RTF import: fix missing upper and lower borders around text

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-04-20 11:50:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8c90854506cc7f1c3d7084ab97c156aead003e2&h=libreoffice-5-3

tdf#107116 RTF import: fix missing upper and lower borders around text

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-08-30 19:18:48 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group