tdf#107116 RTF import: fix missing upper and lower borders around text

See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the context.

Here the problem was that various details of the top border were removed
during the style deduplication, but not the top border sprm itself. That
was interpreted (correctly) by dmapper as "no border", rather than
"inherit from style".

(cherry picked from commit e9f0d8d02885eca619552b19eab30c1eade9e7ef)

Change-Id: I3dec8df789fc7b75fccfff91ce66f457fecd2f6e
Reviewed-on: https://gerrit.libreoffice.org/36692
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>